--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ ui-view {
     border-radius: 5%;*/
 }
 
+.homeTitleBox p:hover {
+    color: rgb(98, 35, 176);
+}
+
 .navBox {
     /*text-align: center;*/
     width: 100%;
@@ -72,6 +76,7 @@ ui-view {
     transform: translateY(-50%);
 }
 
+
 .navBox > div:nth-child(1) {
     vertical-align: top;
     padding-left: 2%;
@@ -95,6 +100,10 @@ ui-view {
     height: 100%;
 }
 
+.navBox button:hover {
+    background-color: rgb(98, 35, 176);
+}
+
 .social {
     color: white;
     position: relative;
@@ -102,14 +111,18 @@ ui-view {
     transform: translateY(-50%);
 }
 
-.outerImageContainer {
+.social:hover {
+    height: 60px;
+}
+
+/*.outerImageContainer {
     width: 100%;
     height: 600px;
     background: linear-gradient(to bottom, #000000, #636161);
-}
+}*/
 
 .innerImageContainer {
-    position: absolute;
+    /*position: absolute;*/
     width: 50%;
     height: 50%;
     margin-left: 25%;
@@ -119,18 +132,17 @@ ui-view {
 
 .outerTextContainer {
     width: 100%;
-    height: 300px;
+    height: 100%;
     background: linear-gradient(to bottom, rgba(0, 166, 12, 0.52),rgba(1, 52, 8, 0.86));
 }
 
 .innerTextContainer {
-    position: absolute;
     width: 50%;
     margin-left: 25%;
-    margin-top: 2.5%;
+    margin-top: 5%;
     background: white;
     font-family: 'Annie Use Your Telescope';
-    font-size: 220%;
+    font-size: 1.8em;
     text-align: center;
     border: 1px solid black;
 }
@@ -140,23 +152,31 @@ ui-view {
 }
 
 
-.outerMapContainer {
+/*.outerMapContainer {
     width: 100%;
     height: 600px;
     background: linear-gradient(to bottom, #000000, #636161);
-}
+}*/
 
 .innerMapContainer {
-    position: absolute;
+    /*position: absolute;*/
     width: 50%;
     height: 50%;
     margin-left: 25%;
-    margin-top: 7%;
-    background: white;
-    border: 1px solid black;
+    padding-top: 7%;
 }
 
 .map {
     width: 100%;
     height: 100%;
+    border: 1px solid black;
+}
+
+#loading {
+    position: fixed;
+    width: 50%;
+    text-align: center;
+    font-family: 'Annie Use Your Telescope';
+    font-size: 3em;
+    top: 35%;
 }
