--- a/style.css
+++ b/style.css
@@ -61,13 +61,12 @@ ui-view {
     text-align: center;
     padding-left: 3%;
     padding-right: 3%;
-    /*border: 8px dotted white;
-    border-radius: 5%;*/
+    transition: color .5s ease;
 }
 
 .homeTitleBox p:hover {
     color: rgb(98, 35, 176);
-    transform: rotate(5deg);
+
 }
 
 .navBox {
@@ -115,26 +114,30 @@ ui-view {
     font-size: 1em;
     text-align: center;
     height: 100%;
+    transition: background-color .5s ease;
 }
 
-/*Dummy class to hide button for active page*/
+/* class to hide button for active page*/
 .selected {
     display: none;
 }
 
 #home:hover {
-    transform: rotate(8deg);
+    /*transform: rotate(8deg);*/
     cursor: pointer;
+    background-color: rgb(98, 35, 176);
 }
 
 #about:hover {
-    transform: rotate(8deg);
+    /*transform: rotate(8deg);*/
     cursor: pointer;
+    background-color: rgb(98, 35, 176);
 }
 
 #favorites:hover {
-    transform: rotate(8deg);
+    /*transform: rotate(8deg);*/
     cursor: pointer;
+    background-color: rgb(98, 35, 176);
 }
 
 .social {
@@ -142,19 +145,21 @@ ui-view {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    transition: color .5s ease;
 }
 
 .social:hover {
-    height: 60px;
+    /*height: 60px;*/
+    color: rgb(98, 35, 176);
 }
 
 
 .header {
     width: 100%;
-    /*height: 5%;*/
     background: linear-gradient(to top, #000000, #636161);
     position: absolute;
     display: flex;
+
 }
 
 .header p {
@@ -162,6 +167,7 @@ ui-view {
     font-size: 5em;
     color: white;
     padding-left: 2%;
+    transition: color .5s ease;
 }
 
 .header p:hover {
@@ -174,7 +180,11 @@ ui-view {
     height: 50%;
     margin-left: 25%;
     margin-top: 9%;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+}
+
+.innerImageContainer:hover {
+    cursor: zoom-in;
 }
 
 .modalImage {
@@ -183,6 +193,10 @@ ui-view {
     height: 100%;
     background-color: rgb (0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modalImage:hover {
+    cursor: zoom-out;
 }
 
 
@@ -200,7 +214,7 @@ ui-view {
     font-family: 'Annie Use Your Telescope';
     font-size: 1.8em;
     text-align: center;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 
 @media (max-width: 1174px){
@@ -229,7 +243,7 @@ ui-view {
 .map {
     width: 100%;
     height: 100%;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 
 #loading {
