--- a/style.css
+++ b/style.css
@@ -123,19 +123,16 @@ ui-view {
 }
 
 #home:hover {
-    /*transform: rotate(8deg);*/
     cursor: pointer;
     background-color: rgb(98, 35, 176);
 }
 
 #about:hover {
-    /*transform: rotate(8deg);*/
     cursor: pointer;
     background-color: rgb(98, 35, 176);
 }
 
 #favorites:hover {
-    /*transform: rotate(8deg);*/
     cursor: pointer;
     background-color: rgb(98, 35, 176);
 }
@@ -144,15 +141,26 @@ ui-view {
     color: white;
     position: relative;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-65%);
     transition: color .5s ease;
 }
 
 .social:hover {
-    /*height: 60px;*/
     color: rgb(98, 35, 176);
 }
 
+#subscribe {
+    margin-right: 140px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#subscribe > input {
+    font-family: "Annie Use Your Telescope";
+    text-align: center;
+    font-size: 100%;
+}
 
 .header {
     width: 100%;
@@ -180,7 +188,6 @@ ui-view {
     height: 50%;
     margin-left: 25%;
     margin-top: 9%;
-    /*border: 1px solid black;*/
 }
 
 .innerImageContainer:hover {
@@ -214,7 +221,6 @@ ui-view {
     font-family: 'Annie Use Your Telescope';
     font-size: 1.8em;
     text-align: center;
-    /*border: 1px solid black;*/
 }
 
 @media (max-width: 1174px){
