--- a/style.css
+++ b/style.css
@@ -16,25 +16,11 @@ ui-view {
 
 .video {
     width: 100%;
-    height: auto;
+    height: 100vh;
     margin-bottom: -1%;
     background: black;
     background-position: center;
     background-size: cover;
-}
-
-/*Full page video dissapears below 1313px*/
-@media (max-width: 1313px) {
-    .video > video {
-        display: none;
-    }
-    .video {
-        height: 100%;
-        width: 100%;
-        background: url('img/driving.JPG') no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
 }
 
 .video > video {
@@ -73,21 +59,18 @@ ui-view {
     width: 100%;
     height: 5%;
     padding-top: 1%;
-    padding-bottom: 1%;
     background: linear-gradient(to top, #000000, #636161);
     position: absolute;
     top: 100%;
     transform: translateY(-100%);
     display: flex;
+    justify-content: space-around;
 }
 
-
 .navBox > div {
-    flex: 1;
     position: relative;
     top: 50%;
     display: inline-block;
-    width: 50%;
     height: 100%;
     transform: translateY(-50%);
 }
@@ -98,43 +81,9 @@ ui-view {
     padding-left: 2%;
 }
 
-.navBox > div:nth-child(2) {
-    text-align: right;
-    padding-right: 2%;
-}
-
-.navBox button {
-    padding-top: .5%;
-    padding-bottom: .5%;
-    padding-left: 3%;
-    padding-right: 3%;
-    border-radius: 8%;
-    background-color: white;
-    font-family: "Annie Use Your Telescope";
-    font-size: 1em;
-    text-align: center;
-    height: 100%;
-    transition: background-color .5s ease;
-}
-
 /* class to hide button for active page*/
 .selected {
     display: none;
-}
-
-#home:hover {
-    cursor: pointer;
-    background-color: rgb(98, 35, 176);
-}
-
-#about:hover {
-    cursor: pointer;
-    background-color: rgb(98, 35, 176);
-}
-
-#favorites:hover {
-    cursor: pointer;
-    background-color: rgb(98, 35, 176);
 }
 
 .social {
@@ -150,9 +99,8 @@ ui-view {
 }
 
 #subscribe {
-    margin-right: 140px;
     position: relative;
-    top: 50%;
+    top: 39%;
     transform: translateY(-50%);
 }
 
@@ -167,7 +115,6 @@ ui-view {
     background: linear-gradient(to top, #000000, #636161);
     position: absolute;
     display: flex;
-
 }
 
 .header p {
@@ -181,7 +128,6 @@ ui-view {
 .header p:hover {
     color: rgb(98, 35, 176);
 }
-
 
 .innerImageContainer {
     width: 50%;
@@ -206,21 +152,26 @@ ui-view {
     cursor: zoom-out;
 }
 
-
 .contentContainer {
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, rgba(0, 166, 12, 0.52),rgba(1, 52, 8, 0.86));
+    /*background: linear-gradient(to bottom, rgba(0, 166, 12, 0.52),rgba(1, 52, 8, 0.86));*/
+    background: url('img/moab.jpg');
+    background-size: cover;
 }
 
 .innerTextContainer {
     width: 50%;
     margin-left: 25%;
     margin-top: 3%;
-    background: white;
+    /*background: white;*/
+    background: rgba(255, 255, 255, 0.34);
     font-family: 'Annie Use Your Telescope';
     font-size: 1.8em;
     text-align: center;
+    color: white;
+    text-shadow: black 0px 0px 1px,   black 0px 0px 1px,   black 0px 0px 1px,
+             black 0px 0px 1px,   black 0px 0px 1px,   black 0px 0px 1px;
 }
 
 @media (max-width: 1174px){
@@ -259,4 +210,19 @@ ui-view {
     font-family: 'Annie Use Your Telescope';
     font-size: 3em;
     top: 35%;
+}
+
+/*============================================================================*/
+/*Full page video dissapears below 1313px*/
+@media (max-width: 1400px) {
+    .video > video {
+        display: none;
+    }
+    .video {
+        height: 100%;
+        width: 100%;
+        background: url('img/driving.JPG') no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
 }
